--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "93ed8f12-cfff-4c86-8a77-0d0870a7be97",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Practical 1: IOT and National Accounts\n",
     "In this exercise, you will practice how to apply the three methods to calculate national GDP, using different databases and years.  \n",
@@ -13,7 +17,11 @@
   {
    "cell_type": "markdown",
    "id": "06dfb2a3-8454-4cab-9137-0f0cc247b4d3",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### Learning goals\n",
     "\n",
@@ -26,7 +34,11 @@
   {
    "cell_type": "markdown",
    "id": "8ee1b689-c727-4b94-9c06-8212dc47c246",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Instructions\n",
     "\n",
@@ -42,7 +54,11 @@
   {
    "cell_type": "markdown",
    "id": "1aaeffd1-b07a-41d1-8c07-f5e346518176",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise 1\n",
     "Using the EUROSTAT data plot a graph showing the yearly GDP change using the following approaches\n",
@@ -60,7 +76,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -94,7 +114,11 @@
   {
    "cell_type": "markdown",
    "id": "e0d6d14b-0df0-43a8-85ed-3757dafa5cc7",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Print all unique values in the National Account Item column (na_item) to use as a reference**\n",
     "\n",
@@ -111,7 +135,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "de4aa089-5c9d-4f22-92c8-90d1f73e45bf",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -131,7 +159,11 @@
   {
    "cell_type": "markdown",
    "id": "1742f376",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Create a dictionary in which you will store your GDP results for comparison"
    ]
@@ -140,7 +172,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "6b6d5aaa",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "NA_GDP_approaches_results = {\"income\": None, \"expenditure\": None, \"production\": None}"
@@ -149,7 +185,11 @@
   {
    "cell_type": "markdown",
    "id": "d43256af",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Income approach\n",
     "\n",
@@ -167,7 +207,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "342a2a9e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# select national account codes to be isolated in the data \n",
@@ -183,7 +227,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "adcdf780",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -245,7 +293,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "febb2ccf",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# select national account codes to be isolated in the data \n",
@@ -261,7 +313,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "00a59880",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# organize and plot your results for the expenditure approach\n",
@@ -296,7 +352,11 @@
   {
    "cell_type": "markdown",
    "id": "c954b3de",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Production approach\n",
     "\n",
@@ -310,7 +370,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "2d8c9bae",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# select national account codes to be isolated in the data \n",
@@ -326,7 +390,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "20d14d57",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# organize and plot your results for the production approach\n",
@@ -356,7 +424,11 @@
   {
    "cell_type": "markdown",
    "id": "6b504c1d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Check your results\n",
     "You don't have to check every single entry, just select one country for each approach, \"NL\" is fine too "
@@ -366,7 +438,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "bce4aa27",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -401,10 +477,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise 2\n",
     "\n",
@@ -426,7 +505,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -451,8 +534,7 @@
    ],
    "source": [
     "# Load the IO data\n",
-    "data = \"data/\"\n",
-    "CBS_IO = pd.ExcelFile(f\"{data}CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
+    "CBS_IO = pd.ExcelFile(f\"data/CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
     "\n",
     "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
     "print(*CBS_IO.sheet_names, sep=\"\\n\")"
@@ -461,7 +543,11 @@
   {
    "cell_type": "markdown",
    "id": "38883649",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Parse your data"
    ]
@@ -470,7 +556,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "9a38df65",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# Parse the sheet for 2021 in current prices\n",
@@ -501,7 +591,11 @@
   {
    "cell_type": "markdown",
    "id": "1bccece1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Perfom some checks\n",
     "Before we begin working with the data, we typically want to perform some data sanity checks. \n",
@@ -515,7 +609,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "8a282134",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -535,7 +633,11 @@
   {
    "cell_type": "markdown",
    "id": "d8a79623",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Create a dictionary in which you will store your results to be later compared"
    ]
@@ -544,7 +646,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "1f5fc6ef",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "IO_GDP_approaches_results = {\"production\": None, \"income\": None, \"expenditure\": None}"
@@ -554,7 +660,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -584,7 +694,11 @@
   {
    "cell_type": "markdown",
    "id": "324fa8c8",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**But wait! What is the value that we obtained from Eurostat and that we see in the macro economic totals documentation of CBS?**\n",
     "\n",
@@ -596,7 +710,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "96dae8ff",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -623,7 +741,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "7a386c66-b7a8-4be5-8c33-713c682ebb99",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -665,7 +787,11 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "cac67f38",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -715,7 +841,11 @@
    "cell_type": "code",
    "execution_count": 57,
    "id": "36be71bb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -739,8 +869,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "env_eeio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -754,11 +885,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a0de1fb450ee5e26d734f0aa5b4c4b29e20575809e5e66472467df7627fd957d"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
