--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "Data should be downloaded into a data/ folder in the same directory your module is, then it should be loaded and plotted in python\n",
     "\n",
-    "- Data source 1: eurostat, national accounts, main GDP aggregates https://ec.europa.eu/eurostat/data/database?node_code=lfsq\n",
+    "- Data source 1: eurostat, national accounts, main GDP aggregates https://ec.europa.eu/eurostat/web/national-accounts/database\n",
     "\n",
     "- Data source 2: CBS https://www.cbs.nl/-/media/_excel/2022/27/83-inputoutput-tables-20152021.xlsx\n",
     "\n",
