--- a/supply_n_use_tables/supply_n_use_tables_sv.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables_sv.ipynb
@@ -1,9 +1,12 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Practical 2: Supply and use tables\n",
     "\n",
@@ -16,7 +19,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# import modules\n",
@@ -29,25 +36,54 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# organize you row and column labels\n",
     "supply_col_lb = supply_.iloc[9,7:].to_list()\n",
-    "supply_row_lb = supply_.iloc[11:, 2].to_list()\n",
-    "\n",
+    "supply_row_lb = supply_.iloc[11:, 2].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# isolate array with only values\n",
-    "supply = supply_.iloc[11:,7:]\n",
-    "\n",
+    "supply = supply_.iloc[11:,7:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# assign clean labels to columns and row\n",
     "supply.columns = supply_col_lb\n",
     "supply.index = supply_row_lb"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise 1\n",
     "\n",
@@ -57,7 +93,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# Print product list (i.e., the index of your table)"
@@ -66,7 +106,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Select two products\n",
@@ -74,9 +118,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "2. Can you quantify their total supply, import, and which industries supply them?"
    ]
@@ -84,7 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Slice your data\n",
@@ -101,9 +152,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "3. What is the total product output at basic price and at purchaser price?\n",
     "\n",
@@ -117,7 +171,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Total supply at basic and purchaser prices for product 1\n",
@@ -126,27 +184,52 @@
     "p_1_taxes_less_subsidies = None\n",
     "p_1_trade_n_transport_margins = None\n",
     "\n",
-    "p_1_purchaser_price = None\n",
-    "\n",
+    "p_1_purchaser_price = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Total supply at basic and purchaser prices for product 2\n",
     "p_2_basic_price = None\n",
     "\n",
     "p_2_taxes_less_subsidies = None\n",
     "p_2_trade_n_transport_margins = None\n",
     "\n",
-    "p_2_purchaser_price = None\n",
-    "\n",
+    "p_2_purchaser_price = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# basic and purchase prices for product 1\n",
     "print(f\"{products[0]}: \\n\\tBasic price: {p_1_basic_price}\\n\\tPurchaser price: {p_1_purchaser_price}\")\n",
     "\n",
     "# basic and purchase prices for product 2\n",
-    "print(f\"{products[1]}: \\n\\tBasic price: {p_2_basic_price}\\n\\tPurchaser price: {p_2_purchaser_price}\")\n"
+    "print(f\"{products[1]}: \\n\\tBasic price: {p_2_basic_price}\\n\\tPurchaser price: {p_2_purchaser_price}\")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exercise 2\n",
     "1. Look at the list of industries (i.e., columns of the supply table) and select two industries"
@@ -155,7 +238,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# Print list of industries (i.e., columns of your table)"
@@ -164,7 +251,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Select two industries\n",
@@ -172,9 +263,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "2. Can you identify the main products and secondary products? "
    ]
@@ -182,23 +276,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Slice your data\n",
     "i_1_supply = None\n",
-    "i_2_supply = None\n",
-    "\n",
+    "i_2_supply = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Isolate non zero values and sort them from biggest to smallest\n",
     "i_1_supply = None\n",
-    "i_2_supply = None\n",
-    "\n",
+    "i_2_supply = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Print results\n",
     "print(f\"{industries[0]}:\\n\\n{i_1_supply}\\n\\n{industries[1]}:\\n\\n{i_2_supply}\")"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -214,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
