updated nomenclature and data

--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -14,9 +14,7 @@
     "\n",
     "The objectives of the practical are:\n",
     "- To understand the structure of the MR IO system\n",
-    "- Calculate national footprints\n",
-    "- Gain transferable skills:\n",
-    "    - Master slicing"
+    "- Calculate national footprints "
    ]
   },
   {
@@ -73,7 +71,7 @@
     "Y = pd.read_csv('data/Y.txt', delimiter='\\t', header=None)\n",
     "V = pd.read_csv('data/V.txt', delimiter='\\t', header=None)\n",
     "F = pd.read_csv('data/F.txt', delimiter='\\t', header=None)\n",
-    "F_y = pd.read_csv('data/F_y.txt', delimiter='\\t', header=None)"
+    "Fhh = pd.read_csv('data/Fhh.txt', delimiter='\\t', header=None)"
    ]
   },
   {
@@ -3497,7 +3495,7 @@
     "Y = Y.values\n",
     "V = V.values\n",
     "F = F.values\n",
-    "F_y = F_y.values"
+    "Fhh = Fhh.values"
    ]
   },
   {
@@ -8661,8 +8659,8 @@
    "outputs": [],
    "source": [
     "# We also collect the final demand extension for CO2 emissions\n",
-    "F_y_CO2 = F_y[0]\n",
-    "F_y_water = F_y[1]\n",
+    "Fhh_CO2 = Fhh[0]\n",
+    "Fhh_water = Fhh[1]\n",
     "# we don't collect employment in final demand because there is no employment to final demand"
    ]
   },
@@ -8703,7 +8701,7 @@
    "source": [
     "#### 4.3 Calculate the carbon footprint\n",
     "\n",
-    "$\\text{F} = \\text{f} \\mathbf{L}\\text{Y} + \\text{F}_{y}$"
+    "$\\text{F} = \\text{f} \\mathbf{L}\\text{Y} + \\text{F}_{hh}$"
    ]
   },
   {
@@ -8728,7 +8726,7 @@
    ],
    "source": [
     "# Calculate the total global footprint\n",
-    "F_CO2_total = f_CO2 @ L @ Y.sum(axis=1) + F_y_CO2.sum()\n",
+    "F_CO2_total = f_CO2 @ L @ Y.sum(axis=1) + Fhh_CO2.sum()\n",
     "F_CO2_total"
    ]
   },
@@ -8745,7 +8743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8754,12 +8752,12 @@
    "outputs": [],
    "source": [
     "# Calculate the footprint broken down by region and final demand category\n",
-    "F_CO2_Y_breakdown = f_CO2 @ L @ Y + F_y_CO2"
+    "F_CO2_Y_breakdown = f_CO2 @ L @ Y + Fhh_CO2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -8869,7 +8867,7 @@
        "       Gross capital formation                      2.589339e+09"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8893,7 +8891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8902,14 +8900,14 @@
    "outputs": [],
    "source": [
     "# Calculate the total regional footprint\n",
-    "F_CO2_oecd = F_CO2_Y_breakdown.iloc[:4].sum() + F_y_CO2[0]\n",
-    "F_CO2_brics = F_CO2_Y_breakdown.iloc[4:8].sum() + F_y_CO2[1]\n",
-    "F_CO2_row = F_CO2_Y_breakdown.iloc[8:].sum() + F_y_CO2[2]"
+    "F_CO2_oecd = F_CO2_Y_breakdown.iloc[:4].sum() + Fhh_CO2[0]\n",
+    "F_CO2_brics = F_CO2_Y_breakdown.iloc[4:8].sum() + Fhh_CO2[1]\n",
+    "F_CO2_row = F_CO2_Y_breakdown.iloc[8:].sum() + Fhh_CO2[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -8958,7 +8956,7 @@
        "CO2 emissions (unit: tonnes/year)  1.577924e+10  1.335968e+10  8.262854e+09"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8997,7 +8995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9011,7 +9009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9025,7 +9023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -9039,7 +9037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 54,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -9815,7 +9813,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9841,7 +9839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -10012,7 +10010,7 @@
        "       Services                                    9.568654e+06"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
